# Fantasia

./: .gitignore  Makefile  README.md  flake8.ini  pyproject.toml  pytest.ini
src/Fantasia/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
